--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -1,8 +1,7 @@
 @techreport{itu372,
-  title={372: Radio Noise},
+  title={ITU-R P.372-12: Radio Noise},
   author={ITU, Recommendation P},
   institution={R-REC-P. 372/en},
-  note = {\url{http://www.itu.int/rec}}
 }
 @misc{wikipedia_pulse,
   title = {{Pulse Wave}},
@@ -38,4 +37,25 @@
   author={Kraus, John D},
   journal={McGraw-Hill},
   year={1988}
+}
+
+@misc{afedri_dual,
+  title = {{Afedri AFE822x SDR-Net (Dual Channel)}},
+  note = {\url{https://www.afedri-sdr.com/index.php/new-afe822x-sdr-net-dual-channel}}
+}
+
+@misc{linrad_home,
+  title = {{Linrad Home Page}},
+  note = {\url{http://www.sm5bsz.com/linuxdsp/linrad.htm}}
+}
+
+@misc{linrad_phasing,
+  title = {{Linrad, two channel reception,
+noise cancelling, antennas phasing}},
+  note = {\url{https://www.sm5bsz.com/linuxdsp/run/phasing/linrad%20phasing%20window,%20v6%20open%20office.html}}
+}
+
+@misc{rowetel_noise_city,
+  title = {{Measuring HF Noise Around a City}},
+  note = {\url{https://www.rowetel.com/?p=7964}}
 }
