--- a/emi/measurement.tex
+++ b/emi/measurement.tex
@@ -1,42 +1,74 @@
 % Title: gl2ps_renderer figure
-% Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
+% Creator: GL2PS 1.4.0, (C) 1999-2017 C. Geuzaine
 % For: Octave
-% CreationDate: Fri Jun  2 12:06:55 2023
+% CreationDate: Sun Jun  4 07:06:22 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
-\includegraphics[scale=1]{measurement-inc}
+\includegraphics{measurement-inc}
 \end{picture}%
 \begin{picture}(300,300)(0,0)
-\fontsize{8}{0}\selectfont\put(55.6071,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
-\fontsize{8}{0}\selectfont\put(88.8214,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
-\fontsize{8}{0}\selectfont\put(122.036,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{8}{0}\selectfont\put(155.25,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{8}{0}\selectfont\put(188.464,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{8}{0}\selectfont\put(221.679,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
-\fontsize{8}{0}\selectfont\put(254.893,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,175.967){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,195.417){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,214.867){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,234.317){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-90}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,253.767){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-80}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,273.217){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-70}}}}
-\fontsize{8}{0}\selectfont\put(20.4025,224.592){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm (3kHz)}}}}}
-\fontsize{8}{0}\selectfont\put(239.495,258.712){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{7.1 MHz}}}}
-\fontsize{8}{0}\selectfont\put(239.495,249.71){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{14.2 MHz}}}}
-\fontsize{8}{0}\selectfont\put(55.6071,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
-\fontsize{8}{0}\selectfont\put(88.8214,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
-\fontsize{8}{0}\selectfont\put(122.036,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{8}{0}\selectfont\put(155.25,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{8}{0}\selectfont\put(188.464,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{8}{0}\selectfont\put(221.679,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
-\fontsize{8}{0}\selectfont\put(254.893,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,33){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-150}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,52.45){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-140}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,71.9){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-130}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,91.35){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,110.8){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
-\fontsize{8}{0}\selectfont\put(36.4025,130.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
-\fontsize{8}{0}\selectfont\put(20.4025,81.625){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm/Hz}}}}}
-\fontsize{8}{0}\selectfont\put(239.495,115.745){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{7.1 MHz}}}}
-\fontsize{8}{0}\selectfont\put(239.495,106.743){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{14.2 MHz}}}}
+\fontsize{10}{0}
+\selectfont\put(59.3115,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
+\fontsize{10}{0}
+\selectfont\put(91.9559,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
+\fontsize{10}{0}
+\selectfont\put(124.6,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{10}{0}
+\selectfont\put(157.245,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{10}{0}
+\selectfont\put(189.889,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{10}{0}
+\selectfont\put(222.533,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
+\fontsize{10}{0}
+\selectfont\put(255.178,168.451){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
+\fontsize{10}{0}
+\selectfont\put(38,175.97){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
+\fontsize{10}{0}
+\selectfont\put(38,195.42){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
+\fontsize{10}{0}
+\selectfont\put(38,214.87){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
+\fontsize{10}{0}
+\selectfont\put(38,234.32){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-90}}}}
+\fontsize{10}{0}
+\selectfont\put(38,253.77){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-80}}}}
+\fontsize{10}{0}
+\selectfont\put(38,273.22){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-70}}}}
+\fontsize{11}{0}
+\selectfont\put(12,224.595){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm (3kHz)}}}}}
+\fontsize{9}{0}
+\selectfont\put(244.29,265.109){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{7.1 MHz}}}}
+\fontsize{9}{0}
+\selectfont\put(244.29,255.581){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{14.2 MHz}}}}
+\fontsize{10}{0}
+\selectfont\put(59.3115,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
+\fontsize{10}{0}
+\selectfont\put(91.9559,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
+\fontsize{10}{0}
+\selectfont\put(124.6,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{10}{0}
+\selectfont\put(157.245,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{10}{0}
+\selectfont\put(189.889,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{10}{0}
+\selectfont\put(222.533,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
+\fontsize{10}{0}
+\selectfont\put(255.178,25.4807){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
+\fontsize{10}{0}
+\selectfont\put(38,33){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-150}}}}
+\fontsize{10}{0}
+\selectfont\put(38,52.45){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-140}}}}
+\fontsize{10}{0}
+\selectfont\put(38,71.9){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-130}}}}
+\fontsize{10}{0}
+\selectfont\put(38,91.35){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
+\fontsize{10}{0}
+\selectfont\put(38,110.8){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
+\fontsize{10}{0}
+\selectfont\put(38,130.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
+\fontsize{11}{0}
+\selectfont\put(12,81.625){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm/Hz}}}}}
+\fontsize{9}{0}
+\selectfont\put(244.29,120.716){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{7.1 MHz}}}}
+\fontsize{9}{0}
+\selectfont\put(244.29,111.188){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{14.2 MHz}}}}
 \end{picture}
